--- a/exoplanets_data_files/index.html
+++ b/exoplanets_data_files/index.html
@@ -7,7 +7,7 @@
     <p>Exoplanets are cool.</p>
     <script>
         (async () => {
-          const response = await fetch('https://api.github.com/repos/WeirdRubberDuck/weirdrubberduck.github.io/contents/exoplanets_data_files/');
+          const response = await fetch('https://api.github.com/repos/WeirdRubberDuck/weirdrubberduck.github.io/contents/');
           const data = await response.json();
           let htmlString = '<ul>';
           for (let file of data) {
