--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <title>Example webpage!</title>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link href='https://fonts.googleapis.com/css?family=Afacad Flux' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Emma Broman</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
